# LSTM-PYNQ

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.py
lstm/: __init__.py  lstm.py  ocr.py  preprocessor.py
lstm/bitstreams/fraktur/W5A5/: fraktur-W5A5-pynq.bit  fraktur-W5A5-pynq.tcl
lstm/bitstreams/plain/W2A2/: plain-W2A2-pynq.bit
lstm/bitstreams/plain/W2A4/: plain-W2A4-pynq.bit
lstm/bitstreams/plain/W4A4/: plain-W4A4-pynq.bit
lstm/bitstreams/plain/W4A8/: plain-W4A8-pynq.bit  plain-W4A8-pynq.tcl
lstm/datasets/fraktur/: alphabet.txt  mean.txt  std_deviation.txt
lstm/datasets/plain/: alphabet.txt
lstm/src/: CMakeLists.txt  README.md
lstm/src/network/: README.md  hls-syn.tcl  main.cpp  make-hw.sh
lstm/src/network/plain/: hw_config.h  top.cpp
lstm/src/network/plain/W2A2/: README.md  r_model_fw_bw.hpp
lstm/src/network/plain/W2A4/: README.md  r_model_fw_bw.hpp
lstm/src/network/plain/W4A4/: README.md  r_model_fw_bw.hpp
lstm/src/network/plain/W4A8/: README.md  r_model_fw_bw.hpp
lstm/src/network/plain/W8A8/: r_model_fw_bw.hpp
notebooks/: Fraktur_OCR.ipynb  Plain_OCR.ipynb
tests/: test_ocr.py
tests/Test_images/fraktur/: 010001.raw.lnrm.png.txt  010001.txt
tests/Test_images/plain/W2A2/: test_image.txt
tests/Test_images/plain/W2A4/: test_image_gt.txt
tests/Test_images/plain/W4A4/: test_image.txt
tests/Test_images/plain/W4A8/: test_image.txt
